# thesis_final_coding

./: .gitignore  .pre-commit-config.yaml  README.md  a100_setup.sh  clean_requirements.txt  diffusion.py  main.py  moses_requirements.txt  preprocess_data.py  pyproject.toml  requirements.in  requirements.txt  sample.sh  setup.sh  sleeper.sh  slurm-16093474.out  slurm-16105070.out  slurm-16129469.out  slurm-16138942.out  slurm-16169744.out  slurm-16204762.out  slurm-16204768.out  slurm-16208608.out  slurm-16332198.out  slurm-16643788.out  slurm-16643872.out  test_job.sh  tokenizer.py  train_checkpoint.sh  train_fresh.sh  val_mae_per_property.csv
.github/workflows/: format-and-lint.yml
configs/: config.yaml
configs/callbacks/: checkpoint_every_n_steps.yaml  checkpoint_monitor.yaml
configs/conditioning/: cfg.yaml  defaults.yaml  embed.yaml  no.yaml  prepend.yaml
configs/data/: kraken.yaml
configs/experiment/: medium.yaml  preliminary_tokenization_selection.yaml  small.yaml  tiny.yaml
configs/mode/: evaluate_samples.yaml  train.yaml
configs/model/: medium.yaml  small-ar.yaml  small.yaml  tiny-ar.yaml  tiny.yaml
configs/paths/: cluster.yaml
configs/property_prediction/: default.yaml
configs/strategy/: ddp_spawn.yaml  fsdp.yaml
configs/tokenizer/: ape_110.yaml  ape_60.yaml  ape_80.yaml  defaults.yaml  wordlevel.yaml
data/vocab_list/: train_data_encoding.pt
data/vocab_list/tokenizer/: tokenizer.json  tokenizer_config.json
hydra_configs/: config.yaml
hydra_configs/model/: small.yaml
hydra_configs/strategy/: ddp.yaml
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_10/: hparams.yaml  metrics.csv
lightning_logs/version_3/: hparams.yaml  metrics.csv
lightning_logs/version_4/: metrics.csv
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_6/: hparams.yaml  metrics.csv
lightning_logs/version_8/: hparams.yaml  metrics.csv
models/: dit.py
other/: generate_tokenizer_vocab_latex.py
scripts/: infer_all.sh  migrate.sh  moses_install.sh  quick_test.sh  run.sh  sample.sh  setup.sh  sleeper.sh
scripts/training/: cfg_condition.sh  embedding_condition.sh  no_condition.sh  prepend_condition.sh
selfies_wordlevel/: tokenizer.json  tokenizer_config.json
src/: __init__.py  diffusion.py  evaluate_samples.py  evaluating.py  generate_samples.py  generating.py  tokenizer.py  train.py  training.py
src/analysis/: __init__.py  bos_eos_analyzer.py  metrics_plotting.py  metrics_runner.py
src/common/utils/: __init__.py  column_selector.py  cuda_settings.py  list_reader.py  logging_config.py  setup.py
src/evaluate/: __init__.py  bos_eos_analysis.py  bos_eos_analyzer.py  length_histogram.py  metrics.py  metrics_core.py  metrics_plotting.py  metrics_runner.py  plot.py
src/mdlm/: __init__.py  diffusion.py  evaluating.py  generating.py  training.py
src/mdlm/analysis/: __init__.py  bos_eos_analyzer.py  metrics_core.py  metrics_plotting.py  metrics_runner.py  qualitative_analysis.py
src/mdlm/modeling/: __init__.py  ema.py  noise_schedule.py
src/mdlm/models/: dit.py
src/mdlm/preprocessing/: __init__.py  augmentation.py  create_datasets.py  csv_reader.py  discretization.py  normalization.py  preprocessing_pipeline.py
src/mdlm/tokenizing/: __init__.py  learn_ape_vocab.py  selfies_tokenizer.py  tokenizer_builder.py  tokenizer_runner.py
src/mdlm/utils/: __init__.py  column_selector.py  compute_histogram.py  compute_medians.py  length_sampler.py  torch_utils.py
src/modeling/: __init__.py  ema.py  noise_schedule.py  samplers.py
src/models/: __init__.py  dit.py
src/preprocessing/: __init__.py  augmentation.py  create_datasets.py  csv_reader.py  discretization.py  normalization.py  preprocessing.py  preprocessing_pipeline.py
src/property_prediction/: __init__.py  eval_mae.py  gcnn.py  gnn_dataset.py  graph_utils.py  inference.py  train_property_predictor.py  training.py  visualize_cutoffs.py
src/tokenizing/: __init__.py  learn_ape_vocab.py  selfies_tokenizer.py  tokenizer.py  tokenizer_builder.py  tokenizer_runner.py
src/utils/: __init__.py  augment_dataset.py  batch_printing.py  column_selector.py  create_datasets.py  csv_data_reader.py  logging_config.py  plot_dist.py  preprocess_data.py  setup.py  torch_utils.py
src/utils/misc/: preprocess_data.py  setup.py
utils/: create_datasets.py  csv_data_reader.py
utils/misc/: create_datasets.py  get_torch_dtype.py  preprocess_data.py
utils/modeling/: samplers.py
